# typed-combinators

./: .gitignore  CHANGELOG.md  LICENSE  TypedApplicativeCombinators.lhs  TypedCombinators.hs  TypedCombinators.lhs  references.bib  typed-combinators.cabal
reference/: skconv.ml
src/: TypedCombinators.hs
